--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "employee-dir-app",
   "version": "0.1.0",
-  "homepage": "/",
+  "homepage": "https://mighty-brushlands-23901.herokuapp.com/",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.13",
